--- a/ci/base/pipeline.yml
+++ b/ci/base/pipeline.yml
@@ -17,7 +17,7 @@
 #@      "resource_type",
 #@      "gcr_image_resource",
 #@      "project_gcr_image_resource",
-#@      "git_resource",
+#@      "github_resource",
 #@      "registry_image_resource",
 #@      "semver_resource",
 #@      "apache_directory_index_resource",
@@ -42,10 +42,10 @@ resources:
   - #@ gcr_image_resource("gcloud-image", "google.com/cloudsdktool/cloud-sdk", "alpine")
   - #@ project_gcr_image_resource("task-image", "geode-native-task")
   - #@ project_gcr_image_resource("clang-tools-image", "geode-native-clang-tools")
-  - #@ git_resource("source", data.values.repository.url, data.values.repository.branch, ignore_paths=["ci/*", "packer/*"])
+  - #@ github_resource("source", data.values.github.owner, data.values.github.repository, data.values.repository.branch, ignore_paths=["ci/*", "packer/*"])
   - #@ template.replace(build_resources(data.values.builds, data.values.configs))
   - #@ registry_image_resource("ytt-image", "gerritk/ytt")
-  - #@ git_resource("ci-source", data.values.repository.url, data.values.repository.branch, ["ci/*"])
+  - #@ github_resource("ci-source", data.values.github.owner, data.values.github.repository, data.values.repository.branch, ["ci/*"])
   - #@ apache_directory_index_resource("geode", "https://archive.apache.org/dist/geode/", "$VERSION", "apache-geode-$VERSION.tgz")
 
 jobs:
