--- a/ci/release/pipeline.yml
+++ b/ci/release/pipeline.yml
@@ -67,6 +67,10 @@ jobs:
   - #@ docker_job("task-image", "ci-source", "ci/docker/task")
   #@overlay/append
   - #@ docker_job("clang-tools-image", "ci-source", "ci/docker/clang-tools")
+  #@overlay/append
+  - #@ docker_job("abi-dumper-image", "ci-source", "ci/docker/abi-dumper")
+  #@overlay/append
+  - #@ docker_job("abi-compliance-checker-image", "ci-source", "ci/docker/abi-compliance-checker")
 
   #@ for build in data.values.builds:
   #@overlay/append
@@ -146,6 +150,8 @@ groups:
       - #@ packer_job_name(build)
       - #@ docker_job_name("task-image")
       - #@ docker_job_name("clang-tools-image")
+      - #@ docker_job_name("abi-dumper-image")
+      - #@ docker_job_name("abi-compliance-checker-image")
       #@overlay/match by="name"
   - name: all
     jobs:
@@ -157,6 +163,10 @@ groups:
       - #@ docker_job_name("task-image")
       #@overlay/append
       - #@ docker_job_name("clang-tools-image")
+      #@overlay/append
+      - #@ docker_job_name("abi-dumper-image")
+      #@overlay/append
+      - #@ docker_job_name("abi-compliance-checker-image")
       #@overlay/append
       - #@ version_source_job_name()
       #@overlay/append
