--- a/ci/lib/templates.lib.yml
+++ b/ci/lib/templates.lib.yml
@@ -168,32 +168,32 @@ source:
 
 ---
 #@ def cpp_unit_test_task(build, config):
-#@ return remote_task("cpp-unit-tests", config.config, run_cpp_unit_tests(), "5m", build.params)
+#@ return remote_task("cpp-unit-tests", config.config, run_cpp_unit_tests(), "30m", build.params)
 #@ end
 
 ---
 #@ def cpp_integration_test_task(build, config):
-#@ return remote_task("cpp-integration-tests", config.config, run_cpp_integration_tests(), "30m", build.params)
+#@ return remote_task("cpp-integration-tests", config.config, run_cpp_integration_tests(), "1h", build.params)
 #@ end
 
 ---
 #@ def cpp_legacy_integration_test_task(build, config):
-#@ return remote_task("cpp-legacy-integration-tests", config.config, run_cpp_legacy_integration_tests(), "1h", build.params)
+#@ return remote_task("cpp-legacy-integration-tests", config.config, run_cpp_legacy_integration_tests(), "2h", build.params)
 #@ end
 
 ---
 #@ def net_unit_test_task(build, config):
-#@ return remote_task("net-unit-tests", config.config, run_net_unit_tests(), "5m", build.params)
+#@ return remote_task("net-unit-tests", config.config, run_net_unit_tests(), "30m", build.params)
 #@ end
 
 ---
 #@ def net_integration_test_task(build, config):
-#@ return remote_task("net-integration-tests", config.config, run_net_integration_tests(), "30m", build.params)
+#@ return remote_task("net-integration-tests", config.config, run_net_integration_tests(), "1h", build.params)
 #@ end
 
 ---
 #@ def net_legacy_integration_test_task(build, config):
-#@ return remote_task("net-legacy-integration-tests", config.config, run_net_legacy_integration_tests(), "1h", build.params)
+#@ return remote_task("net-legacy-integration-tests", config.config, run_net_legacy_integration_tests(), "2h", build.params)
 #@ end
 
 ---
