--- a/ci/release/pipeline.yml
+++ b/ci/release/pipeline.yml
@@ -68,9 +68,7 @@ jobs:
   #@overlay/append
   - #@ docker_job("clang-tools-image", "ci-source", "ci/docker/clang-tools")
   #@overlay/append
-  - #@ docker_job("abi-dumper-image", "ci-source", "ci/docker/abi-dumper")
-  #@overlay/append
-  - #@ docker_job("abi-compliance-checker-image", "ci-source", "ci/docker/abi-compliance-checker")
+  - #@ docker_job("abi-tools-image", "ci-source", "ci/docker/abi-tools")
 
   #@ for build in data.values.builds:
   #@overlay/append
@@ -150,8 +148,7 @@ groups:
       - #@ packer_job_name(build)
       - #@ docker_job_name("task-image")
       - #@ docker_job_name("clang-tools-image")
-      - #@ docker_job_name("abi-dumper-image")
-      - #@ docker_job_name("abi-compliance-checker-image")
+      - #@ docker_job_name("abi-tools-image")
       #@overlay/match by="name"
   - name: all
     jobs:
@@ -164,9 +161,7 @@ groups:
       #@overlay/append
       - #@ docker_job_name("clang-tools-image")
       #@overlay/append
-      - #@ docker_job_name("abi-dumper-image")
-      #@overlay/append
-      - #@ docker_job_name("abi-compliance-checker-image")
+      - #@ docker_job_name("abi-tools-image")
       #@overlay/append
       - #@ version_source_job_name()
       #@overlay/append
