--- a/ci/docker/clang-tools/Dockerfile
+++ b/ci/docker/clang-tools/Dockerfile
@@ -48,5 +48,5 @@ RUN apt-get update \
 
 RUN installer=$(mktemp) \
     && curl -o ${installer} -L $(curl -s https://api.github.com/repos/Kitware/CMake/releases/latest | jq -r '.assets[].browser_download_url | select(test("Linux-x86_64.sh"))') \
-    && bash ${installer} --skip-license --prefix=/usr \
+    && bash ${installer} --skip-license --prefix=/usr/local \
     && rm ${installer}
