--- a/ci/release/pipeline.yml
+++ b/ci/release/pipeline.yml
@@ -68,7 +68,7 @@ jobs:
   #@overlay/append
   - #@ docker_job("clang-tools-image", "ci-source", "ci/docker/clang-tools")
   #@overlay/append
-  - #@ docker_job("abi-tools-image", "ci-source", "ci/docker/abi-tools")
+  - #@ docker_job("abigail-tools-image", "ci-source", "ci/docker/abigail-tools")
 
   #@ for build in data.values.builds:
   #@overlay/append
@@ -148,7 +148,7 @@ groups:
       - #@ packer_job_name(build)
       - #@ docker_job_name("task-image")
       - #@ docker_job_name("clang-tools-image")
-      - #@ docker_job_name("abi-tools-image")
+      - #@ docker_job_name("abigail-tools-image")
       #@overlay/match by="name"
   - name: all
     jobs:
@@ -161,7 +161,7 @@ groups:
       #@overlay/append
       - #@ docker_job_name("clang-tools-image")
       #@overlay/append
-      - #@ docker_job_name("abi-tools-image")
+      - #@ docker_job_name("abigail-tools-image")
       #@overlay/append
       - #@ version_source_job_name()
       #@overlay/append
