--- a/ci/base/pipeline.yml
+++ b/ci/base/pipeline.yml
@@ -47,6 +47,7 @@ resources:
   - #@ registry_image_resource("ytt-image", "gerritk/ytt")
   - #@ github_resource("ci-source", data.values.github.owner, data.values.github.repository, data.values.repository.branch, ["ci/*"])
   - #@ apache_directory_index_resource("geode", "https://archive.apache.org/dist/geode/", "$VERSION", "apache-geode-$VERSION.tgz")
+  - #@ apache_directory_index_resource("geode-native", "https://archive.apache.org/dist/geode/", "$VERSION", "apache-geode-native-$VERSION-src.tgz")
 
 jobs:
   - #@ template.replace(build_jobs(data.values.builds, data.values.configs))
