Add license and/or exclusion as appropriate to pass RAT check

--- a/.ratignore
+++ b/.ratignore
@@ -23,6 +23,9 @@ package-list
 .*\.md
 .*\.md.erb
 
+# docker/
+bellsoft.repo
+
 # contrib/pdxautoserializer
 # public domain sources
 CPPDictionary.hpp
